configuration is now done via Configuration class in edu.fsuj.biosys.tool.configuration
git-svn-id: https://subversion.rz.uni-jena.de/svn/inf/biosys/Software/InteractionDb@3066 0663d037-a378-0410-a7c0-deced3e4f29d

--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="src" path="/URN"/>
 	<classpathentry kind="src" path="/GUI"/>
 	<classpathentry kind="src" path="/OrganismTools"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Configuration"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
